[gd_scene load_steps=30 format=3 uid="uid://1kogviwknlhi"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_gbxfl"]
[ext_resource type="Texture2D" uid="uid://ckey4pk757gmh" path="res://Sprites/Player/Main_Character_Sprite_Sheet.png" id="2_afywq"]
[ext_resource type="AudioStream" uid="uid://dk3qkajcf70k" path="res://Sound/mixkit-game-gun-shot-1662.mp3" id="3_xvoch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xe75o"]
atlas = ExtResource("2_afywq")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xutdv"]
atlas = ExtResource("2_afywq")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tsx0"]
atlas = ExtResource("2_afywq")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwg6x"]
atlas = ExtResource("2_afywq")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqejj"]
atlas = ExtResource("2_afywq")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvptj"]
atlas = ExtResource("2_afywq")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vthf8"]
atlas = ExtResource("2_afywq")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmwyd"]
atlas = ExtResource("2_afywq")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwux6"]
atlas = ExtResource("2_afywq")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_adwbn"]
atlas = ExtResource("2_afywq")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x6bg"]
atlas = ExtResource("2_afywq")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhowq"]
atlas = ExtResource("2_afywq")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_crcyf"]
atlas = ExtResource("2_afywq")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv8mq"]
atlas = ExtResource("2_afywq")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2p5h"]
atlas = ExtResource("2_afywq")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bifvj"]
atlas = ExtResource("2_afywq")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_scn72"]
atlas = ExtResource("2_afywq")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqf2j"]
atlas = ExtResource("2_afywq")
region = Rect2(112, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u30ip"]
atlas = ExtResource("2_afywq")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbad0"]
atlas = ExtResource("2_afywq")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_alhch"]
atlas = ExtResource("2_afywq")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o017k"]
atlas = ExtResource("2_afywq")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8pjy"]
atlas = ExtResource("2_afywq")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiejo"]
atlas = ExtResource("2_afywq")
region = Rect2(16, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_be34y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe75o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xutdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tsx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xutdv")
}],
"loop": true,
"name": &"walk0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwg6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqejj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvptj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqejj")
}],
"loop": true,
"name": &"walk1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vthf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmwyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwux6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmwyd")
}],
"loop": true,
"name": &"walk2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adwbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x6bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhowq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x6bg")
}],
"loop": true,
"name": &"walk3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crcyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv8mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2p5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv8mq")
}],
"loop": true,
"name": &"walk4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bifvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scn72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqf2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scn72")
}],
"loop": true,
"name": &"walk5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u30ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbad0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alhch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbad0")
}],
"loop": true,
"name": &"walk6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o017k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8pjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiejo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8pjy")
}],
"loop": true,
"name": &"walk7",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb5tv"]
size = Vector2(44, 64)

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 17
script = ExtResource("1_gbxfl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_be34y")
animation = &"walk7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_sb5tv")

[node name="BulletTimer" type="Timer" parent="."]

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="FastFireTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xvoch")
volume_db = -30.0

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="FastFireTimer" to="." method="_on_fast_fire_timer_timeout"]
